--- a/Unit03/3-1.2_intro_Python.ipynb
+++ b/Unit03/3-1.2_intro_Python.ipynb
@@ -78,9 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20:55:20.000500\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import time\n",
     "\n",
@@ -99,9 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "09:10:20.900000\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import time\n",
     "\n",
@@ -120,9 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01:10:00\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import time\n",
     "\n",
@@ -141,9 +165,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "hour must be in 0..23",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdatetime\u001b[39;00m \u001b[39mimport\u001b[39;00m time\n\u001b[0;32m      3\u001b[0m \u001b[39m# Assigning a time variable with an invalid attribute\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m t \u001b[39m=\u001b[39m time(hour \u001b[39m=\u001b[39;49m \u001b[39m29\u001b[39;49m)\n\u001b[0;32m      5\u001b[0m \u001b[39mprint\u001b[39m(t)\n",
+      "\u001b[1;31mValueError\u001b[0m: hour must be in 0..23"
+     ]
+    }
+   ],
    "source": [
     "from datetime import time\n",
     "\n",
@@ -162,9 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The time is:  9  hours  10  minutes 43  seconds and  100  microseconds\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import time\n",
     "\n",
@@ -192,9 +236,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old time:  09:10:43.000100\n",
+      "New time:  08:08:43.000100\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import time\n",
     "\n",
@@ -220,46 +273,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "08:45:00\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a `time` variable containing the time: 8:45 AM\n",
-    "\n"
+    "\n",
+    "from datetime import time\n",
+    "\n",
+    "t = time(8,45)\n",
+    "print(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "08:45:01.000150\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a `time` variable containing the time: 8:45:01:000150 PM\n",
-    "\n"
+    "\n",
+    "from datetime import time\n",
+    "\n",
+    "t = time(8,45,1,150)\n",
+    "print(t)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Print the hour (only) contained in t3\n",
     "\n",
     "from datetime import time\n",
     "t3 = time(hour = 15, minute = 10, second = 0)\n",
+    "print(t3.hour)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16:10:00\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Modify t3 to: 4:10 PM\n",
     "t3 = time(hour = 15, minute = 10, second =0)\n",
-    "\n"
+    "t4 = t3.replace(hour = 16)\n",
+    "print(t4)\n"
    ]
   },
   {
@@ -298,9 +393,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date1 is:  2013-05-07\n",
+      "date2 is:  1999-04-23\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import date\n",
     "\n",
@@ -324,9 +428,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Special Date is: / month:  11 / day:  15 / year:  2017\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import date\n",
     "\n",
@@ -350,9 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old date:  2015-02-28\n",
+      "New date:  2016-02-29\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import date\n",
     "\n",
@@ -375,9 +496,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-05\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import date\n",
     "\n",
@@ -399,22 +528,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2012-03-28\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a `date` variable containing: (March 28 2012)\n",
-    "\n"
+    "\n",
+    "from datetime import date\n",
+    "d = date(2012, 3, 28)\n",
+    "print(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-01\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Prompt the user to enter a month and a day, get the current year, then create a date object with the information collected\n",
-    "\n"
+    "\n",
+    "from datetime import date\n",
+    "\n",
+    "m = int(input(\"month?\"))\n",
+    "da = int(input(\"day?\"))\n",
+    "\n",
+    "d = date(year = 2023, month = m, day = da)\n",
+    "print(d)"
    ]
   },
   {
@@ -481,9 +636,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Method 1:  2022-07-04 16:30:00\n",
+      "Method 2:  2022-07-04 16:30:00\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -507,9 +671,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year is:  2022\n",
+      "Minute is:  30\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -532,9 +705,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-07-04 16:30:30\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -555,9 +736,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-05 16:31:27.168492\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -575,9 +764,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time is:  16:31:50.048803\n",
+      "Date is:  2023-01-05\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime, time, date\n",
     "\n",
@@ -601,9 +799,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-05 06:45:00\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime, time, date\n",
     "\n",
@@ -871,7 +1077,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.9.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
   }
  },
  "nbformat": 4,
