--- a/Unit03/3-1.2_intro_Python.ipynb
+++ b/Unit03/3-1.2_intro_Python.ipynb
@@ -837,45 +837,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2012-03-28 12:55:10.300000\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a `datetime` variable containing: (March 28 2012 @ 12:55:10:30 AM)\n",
-    "\n"
+    "from datetime import datetime\n",
+    "d = datetime(2012, 3, 28, 12,55,10,300000)\n",
+    "print(d)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "today's hour is: 10\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Write code that prints the current hour\n",
-    "\n"
+    "\n",
+    "from datetime import datetime\n",
+    "d = datetime.today()\n",
+    "print(\"today's hour is:\", d.hour)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-19 \n",
+      "10:13:10.790822\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Write a program that prints the current date on one line and the current time on another line\n",
-    "\n"
+    "from datetime import datetime\n",
+    "d = datetime.today()\n",
+    "print(d.date(), \"\\n\"+ str(d.time()))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-19 12:12:00\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Write a program that:\n",
+    "from datetime import datetime, time, date\n",
     "# 1) prompts the user for a time (hours and minutes only)\n",
+    "t = time(int(input(\"Hour\")), int(input(\"minute\")))\n",
     "# 2) gets the current date\n",
+    "d = date.today()\n",
     "# 3) combines the collected information into a `datetime` variable\n",
-    "\n"
+    "dt = datetime(d.year, d.month, d.day, t.hour, t.minute)\n",
+    "print(dt)\n"
    ]
   },
   {
@@ -932,9 +976,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First format:  10:15 AM\n",
+      "Second format:  10:15:00\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import time\n",
     "t = time(hour = 10, minute = 15)\n",
@@ -958,9 +1011,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First format:  November, 03, 1999\n",
+      "Second format:  Nov 03 99\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import date\n",
     "d = date(year = 1999, month = 11, day =3)\n",
@@ -984,9 +1046,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First format:  November, 03, 1999 @ 10:15 AM\n",
+      "Second format:  Nov 03 99 / 10:15:00\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime \n",
     "dt = datetime(year = 1999, month = 11, day = 3, hour = 10, minute = 15)\n",
@@ -1012,23 +1083,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "05:39:10:PM\n",
+      "17:39:10\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Write a program that displays the time: (17:39:10) as:\n",
+    "from datetime import datetime, time, date\n",
+    "t = time(17,39,10)\n",
+    "\n",
     "# 1) 05:39:10 PM\n",
+    "formatted_string = t.strftime(\"%I:%M:%S:%p\")\n",
+    "print(formatted_string)\n",
     "# 2) 17:39:10\n",
-    "\n"
+    "print(t)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] Write a program that displays the date: (October 23rd 2018) as:\n",
+    "from datetime import datetime, time, date\n",
     "# 1) Oct 23, 2018\n",
     "# 2) 10/23/18\n",
     "# 3) 23/October/2018\n",
