--- a/Unit03/3-1.3_intro_Python.ipynb
+++ b/Unit03/3-1.3_intro_Python.ipynb
@@ -108,9 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 days, 1:15:00  is stored in delta1\n",
+      "Days =  30 | Seconds =  4500 | Microseconds =  0\n",
+      "Total number of seconds =  2596500.0\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import timedelta\n",
     "\n",
@@ -138,9 +148,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2929 days, 14:55:12.724221  is stored in delta2\n",
+      "Total number of seconds =  253119312.724221\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime, timedelta\n",
     "date1 = datetime(year = 2015, month = 1, day = 19)\n",
@@ -165,32 +184,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delta1 = 21 days, 2:03:00\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a `timedelta` object that contains: 2 hours, 3 minutes, and 1 week\n",
-    "\n"
+    "from datetime import timedelta\n",
+    "\n",
+    "delta1 = timedelta(hours=2, minutes= 3, weeks=3)\n",
+    "print(\"Delta1 =\", delta1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4500.0\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Use a `timedelta` object to calculate the total number of seconds in: 1 hour and 15 minutes\n",
-    "\n"
+    "\n",
+    "from datetime import timedelta\n",
+    "\n",
+    "delta1 = timedelta(hours=1, minutes= 15)\n",
+    "print(delta1.total_seconds())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61\n"
+     ]
+    }
+   ],
    "source": [
     "# Use a `timedelta` object to find out how many days are left until your upcoming birthday\n",
-    "\n"
+    "from datetime import timedelta, datetime\n",
+    "\n",
+    "today = datetime.today()\n",
+    "birthday = datetime(2023, 3, 29)\n",
+    "\n",
+    "delta1 = birthday - today\n",
+    "print(delta1.days)\n"
    ]
   },
   {
@@ -236,9 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After 100 days: May/06/2023\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime, timedelta\n",
     "\n",
@@ -264,9 +328,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After 200 days: Aug/14/2023\n",
+      "After 300 days: Nov/22/2023\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime, timedelta\n",
     "\n",
@@ -299,13 +372,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "08 March 2023\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Write a program to compute the date 3 weeks before your birthday \n",
     "# to help you remember when to send the invitations\n",
-    "\n"
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "week = timedelta(weeks=1)\n",
+    "three_weeks = week * 3 \n",
+    "\n",
+    "reminder = birthday - three_weeks\n",
+    "\n",
+    "print(reminder.strftime(\"%d %B %Y\"))\n"
    ]
   },
   {
@@ -506,7 +594,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.9.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
   }
  },
  "nbformat": 4,
