--- a/Unit03/3-1.4_intro_Python.ipynb
+++ b/Unit03/3-1.4_intro_Python.ipynb
@@ -51,9 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "win32\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
@@ -137,9 +145,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Changed working dir to parent:  c:\\Users\\440560\\OneDrive - The College of West Anglia\\tb2\\Unit03\\parent_dir\n",
+      "Changed working dir to child1:  c:\\Users\\440560\\OneDrive - The College of West Anglia\\tb2\\Unit03\\parent_dir\\child1_dir\n",
+      "Changed working dir back to parent:  c:\\Users\\440560\\OneDrive - The College of West Anglia\\tb2\\Unit03\\parent_dir\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -166,9 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current working directory is: c:\\Users\\440560\\OneDrive - The College of West Anglia\\tb2\\Unit03\\parent_dir\n",
+      "Current directory content:  ['child1_dir', 'child2_dir', 'parent_leaf.txt', 'text_file.txt']\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -189,9 +216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current working directory is: c:\\Users\\440560\\OneDrive - The College of West Anglia\\tb2\\Unit03\\parent_dir\n",
+      "Created new_child dir\n",
+      "Current directory content:  ['child1_dir', 'child2_dir', 'new_child', 'parent_leaf.txt', 'text_file.txt']\n",
+      "Removed new_child dir\n",
+      "Current directory content:  ['child1_dir', 'child2_dir', 'parent_leaf.txt', 'text_file.txt']\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -223,9 +262,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current working directory is: c:\\Users\\440560\\OneDrive - The College of West Anglia\\tb2\\Unit03\\parent_dir\n",
+      "Created new_child dir\n",
+      "Current directory content: ['child1_dir', 'child2_dir', 'new_child', 'parent_leaf.txt', 'text_file.txt']\n",
+      "Renamed new_child as old_child\n",
+      "Current directory content:  ['child1_dir', 'child2_dir', 'old_child', 'parent_leaf.txt', 'text_file.txt']\n",
+      "Removed old_child dir\n",
+      "Current directory content:  ['child1_dir', 'child2_dir', 'parent_leaf.txt', 'text_file.txt']\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -440,7 +493,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.9.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
   }
  },
  "nbformat": 4,
