--- a/Unit03/3-1.3_intro_Python.ipynb
+++ b/Unit03/3-1.3_intro_Python.ipynb
@@ -398,15 +398,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54 days, 0:00:00\n",
+      "33 days until the reminder\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Write a program that computes the number of days from the current date till the 3 weeks reminder\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
     "# 1) Create a `timedelta` object (td1) for the period between the current date and your upcoming birthday\n",
+    "birthday = datetime(year=2023, month=3, day=29)\n",
+    "today = datetime.today()\n",
+    "tbday = birthday - today\n",
+    "td1 = timedelta(days= tbday.days)\n",
+    "print(td1) \n",
     "# 2) Create a `timedelta` object (td2) containing 3 weeks\n",
+    "td2 = timedelta(weeks=3)\n",
     "# 3) Use the `timedelta` objects (td) from 1 and 2 to compute the required number of days\n",
-    "\n"
+    "td = td1.days - td2.days \n",
+    "print(td, \"days until the reminder\")"
    ]
   },
   {
@@ -445,9 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Person 1 is older\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import date\n",
     "\n",
@@ -478,12 +504,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "July 4th is still to come this year\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Write a program to find out if 4th of July of this year has passed or not\n",
-    "\n"
+    "from datetime import date\n",
+    "july_4th = date(year=2023, month=7, day=4)\n",
+    "today = date.today()\n",
+    "if (today > july_4th):\n",
+    "    print(\"July 4th has passed this year\")\n",
+    "elif (today < july_4th):\n",
+    "    print(\"July 4th is still to come this year\")\n",
+    "else:\n",
+    "    print(\"HAPPY JULY 4th\")\n"
    ]
   },
   {
@@ -514,9 +556,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 321 days until the December solstice!\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -548,9 +598,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "June solstice is closer\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Complete the following program to find out if you are closer to the current year's June or December solstice\n",
     "\n",
@@ -564,8 +622,12 @@
     "june_solstice = datetime(month = 6, day = 21, year = now.year)\n",
     "\n",
     "# Find out which solstice is closer\n",
+    "today = datetime.today()\n",
     "\n",
-    "\n"
+    "if((june_solstice - today) > (december_solstice - today)):\n",
+    "    print(\"December solstice is closer\")\n",
+    "else:\n",
+    "    print(\"June solstice is closer\")"
    ]
   },
   {
